--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.2.1
+  intl: ^0.17.0
+  http: ^1.2.2
+  image_picker: ^1.1.2
+  firebase_storage: ^12.3.1
 
 dev_dependencies:
   flutter_test:
